@@ -180,6 +180,9 @@ class Database(Component):
     def is_user_card_type(self, card_type):
         raise NotImplementedError
 
+    def is_in_use(self, card_type):
+        raise NotImplementedError
+
     def update_card_type(self, card_type):
         raise NotImplementedError
 
