@@ -1,3 +1,4 @@
+-Cloned card types can now be renamed and deleted.
 -You can now save a set of cards using a name of an existing set, and you will
  get the option of updating the previous set.
 -When adding a new tag, the user gets the choice of whether this tag will be
